--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-plugin-page-transitions": "^1.0.7",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.0.5",
     "uikit": "^3.0.0-rc.16"
   },
   "keywords": [
